# grok-go

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: BUILD.md  HANDOFF.md  claude-code-compat-defects.md  experimental-build-optimization-plan.md  experimental-build-round2-plan.md
docs/plans/: 2026-07-10-grok-proxy-desktop-design.md  2026-07-12-grokgo-opensource-renovation-design.md  2026-07-12-grokgo-opensource-renovation.md
llm-wiki/: README.md  SCHEMA.md
llm-wiki/raw/: README.md  account-quota-sources.md  anthropic-claude-code-compat.md
llm-wiki/wiki/: index.md  log.md
scripts/: build-local.sh  changelog-for-release.py  release-tag.sh  setup-cross-compile.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/variants/light/: icon.icns
src-tauri/src/: account_import.rs  auth.rs  commands.rs  concurrency.rs  config.rs  error.rs  http_client.rs  integrations.rs  lib.rs  main.rs  paths.rs  quota.rs  router.rs  session_affinity.rs  sso_convert.rs  usage.rs
src-tauri/src/gateway/: build_plane_route.rs  empty_completion.rs  error_codes.rs  files_api.rs  image_bridge.rs  job_affinity.rs  live_plane_tests.rs  media_artifacts.rs  mod.rs  payload_optimize.rs  proxy.rs  sanitize.rs  server.rs  tool_surface.rs
src-tauri/src/gateway/anthropic/: mod.rs  request.rs  response.rs  schema.rs  stream.rs
src/components/: brand-context.tsx  error-boundary.tsx  heatmap.tsx  layout.tsx  page-loading.tsx  page-shell.tsx
src/i18n/: context.tsx  index.ts
src/lib/: api.ts  utils.ts
src/pages/: Accounts.tsx  Integrations.tsx  (+5 more)
(+38 files in other folders)
