[package]
name = "grok-go"
version = "0.1.3"
description = "GrokGo — local Grok gateway for Codex"
authors = ["RongleCat"]
edition = "2021"

[lib]
name = "grok_go_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "multipart", "http2", "socks", "cookies"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
directories = "6"
thiserror = "2"
anyhow = "1"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
url = "2"
urlencoding = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open = "5"
bytes = "1"
http-body-util = "0.1"
hyper = "1"
toml = "0.8"
toml_edit = "0.22"
local-ip-address = "0.6"
async-trait = "0.1"
once_cell = "1"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSResponder", "NSRunningApplication"] }
